Minus sign is not displayed inside MathML on the Mac, patch by YAMASHITA Makoto <makotoy@ms.u-tokyo.ac.jp>, b=257978, r=jshin, sr=rbs